nginx-ingress-routing/advanced-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: advanced-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/custom-headers: "default/advanced-response-headers"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /advanced/app1
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80
          - path: /advanced/app2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
